css adjustment for profile picture to prevent stretching on smaller screens

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -133,7 +133,7 @@ nav a {
 
 #profilePic {
     max-width: 100px;
-    height: fit-content;
+    height: 100%;
     background-color: #595959;
     border: 5px solid #595959;
 }
